<resources>
    <string name="app_name">共生</string>
    <string name="app_des">执子之魂，与子共生</string>
    <string name="hello_blank_fragment">这里是刚刚创建的fragment</string>
    <string name="local_music">本地音乐</string>
    <string name="netease_music">网易音乐</string>
    <string name="baidu_music">百度音乐</string>
    <string name="kugou_music">酷狗音乐</string>
    <string name="migu_music">咪咕音乐</string>
    <string name="local_video">本地视频</string>
    <string name="local_recent">最近播放</string>
    <string name="see_more">更多</string>
    <string name="create_play_list">创建歌单</string>
    <string name="edit_play_list">编辑歌单</string>
    <string name="my_play_list">我的歌单</string>
    <string name="my_heart">我喜欢</string>
    <string name="recent_add">最近添加</string>
    <string name="search">搜索</string>
    <string name="no_lrc">暂无歌词</string>
    <string name="song_source">来源</string>
    <string name="search_hint">请输入搜索内容</string>
    <string name="no_play_list_hint">暂无歌单，快创建一个吧</string>
    <string name="please_input_play_list_title_hint">请输入歌单标题</string>
    <string name="please_input_play_list_des_hint">请输入歌单描述(选填)</string>
    <string name="play_list_title_not_allow_empty">歌单名不能为空</string>
    <string name="current_playing">正在播放</string>
    <string name="select_all">全选</string>
    <string name="select_resever">反选</string>
    <string name="select_play_list">选择歌单</string>
    <string name="add_to_play_list">添加到歌单</string>
    <string name="delete_play_list">删除歌单</string>
    <string name="import_song">导入歌曲</string>
    <string name="import_song_success">歌曲导入成功</string>
    <string name="delete_select_songs">删除已选歌曲</string>
    <string name="delete_success">删除成功</string>
    <string name="add_success">添加成功</string>
    <string name="import_playlist">导入网易云歌单</string>
    <string name="please_input_play_list_url">请输入网易云歌单分享地址</string>
    <string name="play_list_conflict">歌单冲突</string>
    <string name="replace">替换</string>
</resources>
