<?xml version="1.0" encoding="utf-8"?>
<com.yizisu.basemvvm.widget.BaseLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".module.fragment.home.RecentPlayFragment">

    <com.yizisu.basemvvm.widget.BaseTextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="?selectableItemBackground"
        android:gravity="center_vertical"
        android:id="@+id/localVideoTv"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="4dp"
        android:text="@string/local_video"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:textStyle="bold">

    </com.yizisu.basemvvm.widget.BaseTextView>

    <com.yizisu.basemvvm.widget.BaseLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="4dp">

        <com.yizisu.basemvvm.widget.BaseTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/my_play_list"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.yizisu.basemvvm.widget.BaseTextView
            android:id="@+id/importPlayListTv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:background="?selectableItemBackground"
            android:drawablePadding="8dp"
            android:gravity="bottom"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/import_playlist"
            android:textColor="@color/colorText"
            android:textSize="12sp"
            android:visibility="gone" />

        <com.yizisu.basemvvm.widget.BaseTextView
            android:id="@+id/createPlayListTv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?selectableItemBackground"
            android:drawablePadding="8dp"
            android:gravity="bottom"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/create_play_list"
            android:textColor="@color/colorText"
            android:textSize="12sp"
            android:visibility="gone" />

        <com.yizisu.basemvvm.widget.BaseImageView
            android:id="@+id/morePlayListTv"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="?selectableItemBackground"
            android:drawablePadding="8dp"
            android:gravity="bottom"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/colorText"
            android:textSize="12sp"
            android:tint="@color/colorText"
            app:srcCompat="@drawable/icon_add" />
    </com.yizisu.basemvvm.widget.BaseLinearLayout>

    <com.yizisu.basemvvm.widget.BaseFrameLayout
        android:layout_width="match_parent"
        android:layout_height="144dp">

        <com.yizisu.basemvvm.widget.BaseRecyclerView
            android:id="@+id/recentPlayRcv"
            android:layout_width="match_parent"
            android:layout_height="144dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <com.yizisu.basemvvm.widget.BaseTextView
            android:id="@+id/noPlayListHintTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_play_list_hint"
            android:textColor="@color/colorTextLight"
            android:textSize="12sp" />
    </com.yizisu.basemvvm.widget.BaseFrameLayout>

</com.yizisu.basemvvm.widget.BaseLinearLayout>