<?xml version="1.0" encoding="utf-8"?>
<com.yizisu.basemvvm.widget.BaseFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.yizisu.basemvvm.widget.BaseLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_dialog_play_list_8_r"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp">

        <com.yizisu.basemvvm.widget.BaseTextView
            android:id="@+id/titleTv"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:text="@string/play_list_conflict"
            android:textColor="@color/colorText"
            android:textSize="16sp" />

        <com.yizisu.basemvvm.widget.BaseTextView
            android:id="@+id/hintTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:paddingBottom="10dp"
            android:textColor="@color/colorText"
            android:textSize="12sp" />

        <com.yizisu.basemvvm.widget.BaseTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:id="@+id/replaceTv"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:text="@string/replace"
            android:textColor="@color/colorText" />

        <com.yizisu.basemvvm.widget.BaseTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:id="@+id/createNewTv"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:text="@string/create_play_list"
            android:textColor="@color/colorText" />


        <com.yizisu.basemvvm.widget.BaseTextView
            android:id="@+id/dialogCancelTv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:background="?selectableItemBackground"
            android:padding="8dp"
            android:text="@android:string/cancel"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />
    </com.yizisu.basemvvm.widget.BaseLinearLayout>
</com.yizisu.basemvvm.widget.BaseFrameLayout>
