<?xml version="1.0" encoding="utf-8"?>
<com.yizisu.basemvvm.widget.BaseLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="100dp"
    android:layout_marginBottom="100dp"
    android:background="@drawable/bg_dialog_play_list_8_r"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="8dp">

    <com.yizisu.basemvvm.widget.BaseTextView
        android:id="@+id/titleTv"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:text="@string/select_play_list"
        android:textColor="@color/colorText"
        android:textSize="16sp" />

    <com.yizisu.basemvvm.widget.BaseRecyclerView
        android:id="@+id/allPlayListRcv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="180dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <com.yizisu.basemvvm.widget.BaseLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.yizisu.basemvvm.widget.BaseTextView
            android:id="@+id/hintTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/play_list_title_not_allow_empty"
            android:textColor="@android:color/holo_red_light"
            android:textSize="12sp"
            android:visibility="invisible" />

        <com.yizisu.basemvvm.widget.BaseTextView
            android:id="@+id/dialogCreateTv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?selectableItemBackground"
            android:padding="8dp"
            android:text="@string/create_play_list"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />


        <com.yizisu.basemvvm.widget.BaseTextView
            android:id="@+id/dialogCancelTv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?selectableItemBackground"
            android:padding="8dp"
            android:text="@android:string/cancel"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />

        <com.yizisu.basemvvm.widget.BaseTextView
            android:id="@+id/dialogOkTv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?selectableItemBackground"
            android:padding="8dp"
            android:text="@android:string/ok"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            android:visibility="gone" />
    </com.yizisu.basemvvm.widget.BaseLinearLayout>
</com.yizisu.basemvvm.widget.BaseLinearLayout>