<?xml version="1.0" encoding="utf-8"?>
<com.yizisu.basemvvm.widget.BaseLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingTop="16dp"
    android:paddingBottom="24dp"
    tools:context=".module.fragment.home.HomeMenuFragment">

    <com.yizisu.basemvvm.widget.BaseLinearLayout
        android:id="@+id/headMusicFl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_my_heart"
            android:tint="@color/colorAccent" />

        <com.yizisu.basemvvm.widget.BaseTextView
            android:id="@+id/heartTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:gravity="center"
            android:lines="1"
            android:text="@string/my_heart"
            android:textColor="@color/colorText"
            android:textSize="12sp" />
    </com.yizisu.basemvvm.widget.BaseLinearLayout>


    <com.yizisu.basemvvm.widget.BaseLinearLayout
        android:id="@+id/localMusicFl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="centerCrop"
            android:padding="4dp"
            android:src="@drawable/icon_local_music"
            android:tint="@color/colorAccent" />

        <com.yizisu.basemvvm.widget.BaseTextView
            android:id="@+id/localTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:gravity="center"
            android:lines="1"
            android:text="@string/local_music"
            android:textColor="@color/colorText"
            android:textSize="12sp" />
    </com.yizisu.basemvvm.widget.BaseLinearLayout>


    <com.yizisu.basemvvm.widget.BaseLinearLayout
        android:id="@+id/recentAddMusicFl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_recent_play"
            android:tint="@color/colorAccent" />

        <com.yizisu.basemvvm.widget.BaseTextView
            android:id="@+id/recentTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:gravity="center"
            android:lines="1"
            android:text="@string/recent_add"
            android:textColor="@color/colorText"
            android:textSize="12sp" />
    </com.yizisu.basemvvm.widget.BaseLinearLayout>


    <com.yizisu.basemvvm.widget.BaseLinearLayout
        android:id="@+id/downloadedMusicFl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.yizisu.basemvvm.widget.BaseFrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="centerCrop"
                android:padding="2dp"
                android:src="@drawable/icon_downloader"
                android:tint="@color/colorAccent" />

        </com.yizisu.basemvvm.widget.BaseFrameLayout>


        <com.yizisu.basemvvm.widget.BaseTextView
            android:id="@+id/downloadedMusicTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:gravity="center"
            android:lines="1"
            android:text="@string/recent_add"
            android:textColor="@color/colorText"
            android:textSize="12sp" />
    </com.yizisu.basemvvm.widget.BaseLinearLayout>

</com.yizisu.basemvvm.widget.BaseLinearLayout>